--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "nuxt": "^3.8.1",
     "postcss": "^8.4.31",
     "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
     "unocss": "^0.57.5",
     "unocss-preset-useful": "^0.3.4",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5",
-    "vuetify-nuxt-module": "^0.6.7"
+    "vuetify-nuxt-module": "^0.6.7",
+    "webpack": "^5.89.0"
   }
 }
